// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component with custom class matches snapshot 1`] = `
<button
  className="Button CUSTOM_CLASS"
/>
`;

exports[`Button component with no props matches snapshot 1`] = `
<button
  className="Button"
/>
`;
